tests/lime/fail/tokens/macro_first/byte_53.wsa
macro 5 [push 53] 5
